added css to article

--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
 						</div>
 					</div>
 					-->
+					<div class="project-h1-container">
+						<h1>Projects</h1>
+					</div>
 					<div class="project-outer-container">
 					<div class="project-container" 
 						v-for="(item, index) in project"
@@ -197,7 +200,7 @@
 							/>
 						</div>
 					</div>
-					<div class="article-outer-container">
+					<div class="article-info-container">
 						<div class="article-container" 
 							v-for="(item, index) in article"
 							:key="index"
@@ -502,6 +505,33 @@
 
 		articleData.article = 
 		[
+			{
+				"title":"React Customize SVG",
+				"title2": "Props, State, Event Handling",
+				"type": "Codepen",
+				"embed" : "true",
+				"codepenid": "VwLOqya",
+				"link": "https://codepen.io/dannyhwangca/full/VwLOqya",
+				"description" : "A React project that uses value from an input to pass information between states & props."
+			},
+			{
+				"title":"React Customize SVG",
+				"title2": "Props, State, Event Handling",
+				"type": "Codepen",
+				"embed" : "true",
+				"codepenid": "VwLOqya",
+				"link": "https://codepen.io/dannyhwangca/full/VwLOqya",
+				"description" : "A React project that uses value from an input to pass information between states & props."
+			},
+			{
+				"title":"React Customize SVG",
+				"title2": "Props, State, Event Handling",
+				"type": "Codepen",
+				"embed" : "true",
+				"codepenid": "VwLOqya",
+				"link": "https://codepen.io/dannyhwangca/full/VwLOqya",
+				"description" : "A React project that uses value from an input to pass information between states & props."
+			},
 			{
 				"title":"React Customize SVG",
 				"title2": "Props, State, Event Handling",
