added article concepts base css

--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
 				"embed" : "true",
 				"codepenid": "VwLOqya",
 				"link": "https://codepen.io/dannyhwangca/full/VwLOqya",
-				"description" : "A React project that uses value from an input to pass information between states & props."
+				"description" : "A React project that uses value from an input."
 			},
 			{
 				"title":"React Customize SVG",
