added message section

--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
 									<i class="far fa-minus-square article-close"></i>
 								</div>
 							</div>
-							<p v-html="item.description"></p>
+							<p class="article-message" v-html="item.message"></p>
+							<p class="article-description" v-html="item.description"></p>
 							
 						</div>
 					</div>
