procecss json html msg

--- a/index.html
+++ b/index.html
@@ -215,7 +215,6 @@
 							</div>
 							<p class="article-message" v-html="item.message"></p>
 							<p class="article-description" v-html="item.description"></p>
-							
 						</div>
 					</div>
 				</div>
@@ -507,49 +506,20 @@
 		articleData.article = 
 		[
 			{
-				"title":"React Customize SVG",
-				"title2": "Props, State, Event Handling",
-				"type": "Codepen",
-				"embed" : "true",
-				"codepenid": "VwLOqya",
-				"link": "https://codepen.io/dannyhwangca/full/VwLOqya",
-				"description" : "A React project that uses value from an input to pass information between states & props."
+				"title":"Angular Components",
+				"type" : "Angular",
+				"description" : "Basic Angular Knowledge",
+				"message": "<h2>Component</h2><p>hello</p>"
 			},
 			{
 				"title":"React Customize SVG",
-				"title2": "Props, State, Event Handling",
-				"type": "Codepen",
-				"embed" : "true",
-				"codepenid": "VwLOqya",
-				"link": "https://codepen.io/dannyhwangca/full/VwLOqya",
-				"description" : "A React project that uses value from an input."
+				"description" : "A React project that uses value from an input to pass information between states & props.",
+				"message": ""
 			},
 			{
 				"title":"React Customize SVG",
-				"title2": "Props, State, Event Handling",
-				"type": "Codepen",
-				"embed" : "true",
-				"codepenid": "VwLOqya",
-				"link": "https://codepen.io/dannyhwangca/full/VwLOqya",
-				"description" : "A React project that uses value from an input to pass information between states & props."
-			},
-			{
-				"title":"React Customize SVG",
-				"title2": "Props, State, Event Handling",
-				"type": "Codepen",
-				"embed" : "true",
-				"codepenid": "VwLOqya",
-				"link": "https://codepen.io/dannyhwangca/full/VwLOqya",
-				"description" : "A React project that uses value from an input to pass information between states & props."
-			},
-			{
-				"title":"React Customize SVG",
-				"title2": "Props, State, Event Handling",
-				"type": "Codepen",
-				"embed" : "true",
-				"codepenid": "VwLOqya",
-				"link": "https://codepen.io/dannyhwangca/full/VwLOqya",
-				"description" : "A React project that uses value from an input to pass information between states & props."
+				"description" : "A React project that uses value from an input to pass information between states & props.",
+				"message": ""
 			}
 		]
 
@@ -557,21 +527,18 @@
 		[
 			{
 				"title":"React Customize SVG",
-				"title2": "Props, State, Event Handling",
-				"type": "Codepen",
-				"embed" : "true",
-				"codepenid": "VwLOqya",
-				"link": "https://codepen.io/dannyhwangca/full/VwLOqya",
-				"description" : "A React project that uses value from an input to pass information between states & props."
+				"description" : "A React project that uses value from an input to pass information between states & props.",
+				"message": ""
 			},
 			{
 				"title":"React Customize SVG",
-				"title2": "Props, State, Event Handling",
-				"type": "Codepen",
-				"embed" : "true",
-				"codepenid": "VwLOqya",
-				"link": "https://codepen.io/dannyhwangca/full/VwLOqya",
-				"description" : "A React project that uses value from an input to pass information between states & props."
+				"description" : "A React project that uses value from an input to pass information between states & props.",
+				"message": ""
+			},
+			{
+				"title":"React Customize SVG",
+				"description" : "A React project that uses value from an input to pass information between states & props.",
+				"message": ""
 			}
 		]
 
