fixed css for lists

--- a/index.html
+++ b/index.html
@@ -258,6 +258,11 @@
 								<h2>Design</h2>
 								<ul>
 									<li>FontAwesome</li>
+										<ul>
+											<li>
+												SVG Icons
+											</li>
+										</ul>
 								</ul>
 						</div>
 						<div class="site-info right-site-info">
