added color style to site info and changed articles color pallet

--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
 			<a name="linkSite"></a>
 			<div id="site-trigger" class="site-container">
 				<div class="site-inner-container">
+					<h1 class="site-h1-title">About this site</h1>
 					<div class="main-site-info">
-						<h1>About this site</h1>
 						<p>
 							Thank you for visiting my humble resume site! I love making respoinsive, interactable, and animated web features. 
 							<br><br>
